--- a/notebooks/inference_finetuned.ipynb
+++ b/notebooks/inference_finetuned.ipynb
@@ -46,55 +46,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Comparing models for differents epochs\n",
-    "This code uses models saved in \"results/pretrained\" by the finetuning notebook. As there are 15 of them and they are big, we can't it directly upload them on git. So run \"fine_tune_trocr.ipynb\" to generate them. \n",
-    "\n",
-    "However, we provide the best performing model in the following link : https://drive.google.com/drive/folders/12I3GhCDFewbT3f5TpPIMebGkLSHleFem?usp=sharing. \n",
-    "\n",
-    "\n",
-    "If you download it and put it in the \"results/pretrained\" folder, you can run the next section of the code to verify the performence of the majority voting algorithm.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Custom dataset class for TrOCR (Transformer-based Optical Character Recognition) \n",
     "class TrOCRDataset(Dataset):\n",
+    "\n",
+    "    # Constructor to initialize the dataset with root directory, dataframe, processor, and optional max target length\n",
     "    def __init__(self, root_dir, df, processor, max_target_length=128):\n",
     "        self.root_dir = root_dir\n",
     "        self.df = df\n",
     "        self.processor = processor\n",
     "        self.max_target_length = max_target_length\n",
     "\n",
+    "    # Return the total number of samples in the dataset (i.e., the number of rows in the DataFrame)\n",
     "    def __len__(self):\n",
     "        return len(self.df)\n",
     "\n",
+    "    # Retrieve an individual sample (image and its corresponding text) from the dataset\n",
     "    def __getitem__(self, idx):\n",
-    "        # get file name + text \n",
+    "        # Get file name + text \n",
     "        file_name = self.df['file_name'][idx]\n",
     "        text = self.df['text'][idx]\n",
-    "        # some file names end with jp instead of jpg, the two lines below fix this\n",
+    "        # Some file names end with jp instead of jpg, the two lines below fix this\n",
     "        if file_name.endswith('jp'):\n",
     "          file_name = file_name + 'g'\n",
-    "        # prepare image (i.e. resize + normalize)\n",
+    "        # Prepare image (i.e. resize + normalize)\n",
     "        image = Image.open(self.root_dir + file_name).convert(\"RGB\")\n",
     "        pixel_values = self.processor(image, return_tensors=\"pt\").pixel_values\n",
-    "        # add labels (input_ids) by encoding the text\n",
+    "        # Add labels (input_ids) by encoding the text\n",
     "        labels = self.processor.tokenizer(text, \n",
     "                                          padding=\"max_length\", \n",
     "                                          max_length=self.max_target_length).input_ids\n",
-    "        # important: make sure that PAD tokens are ignored by the loss function\n",
+    "        # Important: make sure that PAD tokens are ignored by the loss function\n",
     "        labels = [label if label != self.processor.tokenizer.pad_token_id else -100 for label in labels]\n",
     "\n",
     "        encoding = {\"pixel_values\": pixel_values.squeeze(), \"labels\": torch.tensor(labels)}\n",
-    "        return encoding\n",
-    "    \n",
-    "    \n"
+    "        return encoding"
    ]
   },
   {
@@ -103,6 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to evaluate the model's performance on a given dataset using CER and WER metrics\n",
     "def evaluate(model_path,processor_path, dataset_path):\n",
     "    \n",
     "    df = pd.DataFrame(np.load(dataset_path)) \n",
@@ -113,7 +104,6 @@
     "    test_dataloader = DataLoader(test_dataset, batch_size=8)\n",
     "    \n",
     "    device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
-    "    # device = \"mps\"\n",
     "    model = VisionEncoderDecoderModel.from_pretrained(model_path)\n",
     "    model = model.to(device)\n",
     "    \n",
@@ -122,21 +112,19 @@
     "    print(\"Running evaluation...\")\n",
     "\n",
     "    for batch in test_dataloader:\n",
-    "        # predict using generate\n",
+    "        # Predict using generate\n",
     "        pixel_values = batch[\"pixel_values\"].to(device)\n",
     "        outputs = model.generate(pixel_values)\n",
     "\n",
-    "        # decode\n",
+    "        # Decode\n",
     "        pred_str = processor.batch_decode(outputs, skip_special_tokens=True)\n",
     "        labels = batch[\"labels\"]\n",
     "        labels[labels == -100] = processor.tokenizer.pad_token_id\n",
     "        label_str = processor.batch_decode(labels, skip_special_tokens=True)\n",
-    "\n",
     "        \n",
-    "        # add batch to metric\n",
+    "        # Add batch to metric\n",
     "        cer.add_batch(predictions=pred_str, references=label_str)\n",
     "        wer.add_batch(predictions=pred_str, references=label_str) \n",
-    "    \n",
     "    \n",
     "    return {\"cer\": cer.compute(), \"wer\": wer.compute()} "
    ]
@@ -215,32 +203,27 @@
    ],
    "source": [
     "max_epochs = 15\n",
+    "\n",
     "test_metrics_list = []\n",
     "val_metrics_list = []\n",
     "\n",
     "for i in range(1,max_epochs+1):\n",
-    "    \n",
+    "    # Evaluate the model on the test set for the current epoch\n",
     "    test_metrics = evaluate(f\"results/pretrained/small_epochs={i}_fulldata\", \n",
     "                        \"microsoft/trocr-small-handwritten\", \n",
     "                        \"data/testset.npy\")\n",
     "    \n",
+    "    # Evaluate the model on the validation set for the current epoch\n",
     "    val_metrics = evaluate(f\"results/pretrained/small_epochs={i}_fulldata\",\n",
     "                          \"microsoft/trocr-small-handwritten\",\n",
     "                          \"data/valset.npy\")\n",
+    "    \n",
     "    test_metrics_list.append(test_metrics)\n",
     "    val_metrics_list.append(val_metrics)\n",
+    "\n",
     "    print(f\"Epoch {i} - Val CER: {val_metrics['cer']}, Val WER: {val_metrics['wer']}\") \n",
-    "    print(f\"Epoch {i} - Test CER: {test_metrics['cer']}, Test WER: {test_metrics['wer']}\")\n",
-    "    \n",
-    "    "
+    "    print(f\"Epoch {i} - Test CER: {test_metrics['cer']}, Test WER: {test_metrics['wer']}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -262,14 +245,16 @@
     "test_cers = [\n",
     "    test_metrics[\"cer\"] for test_metrics in test_metrics_list\n",
     "]\n",
+    "\n",
     "val_cers = [\n",
     "    val_metrics[\"cer\"] for val_metrics in val_metrics_list\n",
     "]\n",
+    "\n",
     "plt.plot(range(1,max_epochs+1), test_cers, label=\"Test CER\")\n",
     "plt.plot(range(1,max_epochs+1), val_cers, label=\"Val CER\")\n",
-    "# name the x-axis\n",
+    "# Name the x-axis\n",
     "plt.xlabel(\"Epochs\")\n",
-    "# name the y-axis\n",
+    "# Name the y-axis\n",
     "plt.ylabel(\"CER\")\n",
     "plt.title(\"CER vs Epochs in fine-tuned model\")\n",
     "plt.legend()\n",
@@ -306,18 +291,19 @@
     "test_wers = [\n",
     "    test_metrics[\"wer\"] for test_metrics in test_metrics_list\n",
     "]\n",
+    "\n",
     "val_wers = [\n",
     "    val_metrics[\"wer\"] for val_metrics in val_metrics_list\n",
     "]\n",
+    "\n",
     "plt.plot(range(1,max_epochs+1), test_wers, label=\"Test WER\")\n",
     "plt.plot(range(1,max_epochs+1), val_wers, label=\"Val WER\")\n",
-    "# name the x-axis\n",
+    "# Name the x-axis\n",
     "plt.xlabel(\"Epochs\")\n",
-    "# name the y-axis\n",
+    "# Name the y-axis\n",
     "plt.ylabel(\"WER\")\n",
     "plt.title(\"WER vs Epochs in fine-tuned model\")\n",
-    "plt.legend()\n",
-    "\n"
+    "plt.legend()"
    ]
   },
   {
@@ -339,7 +325,7 @@
     }
    ],
    "source": [
-    "# find index for which cer loss is minimum \n",
+    "# Find index for which cer loss is minimum \n",
     "val_cer_list = [val_metrics['cer'] for val_metrics in val_metrics_list]\n",
     "min_cer_index = val_cer_list.index(min(val_cer_list))\n",
     "\n",
@@ -352,21 +338,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The best performing model is obtained after 11 epochs. \n",
-    "\n",
-    "### Majority voting algorithm"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the best model \n",
+    "# Load the best model \n",
     "best_model = VisionEncoderDecoderModel.from_pretrained(f\"results/pretrained/small_epochs={min_cer_index+1}_fulldata\")\n",
     "best_model = best_model.to(\"mps\") "
    ]
@@ -377,41 +354,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function that performs majority voting to combine predictions from three models\n",
     "def majority_vote(htrnet, cnn_bilstm_mltu, trocr, trocr_process, image):\n",
     "    \"\"\"\n",
     "    In case of tie, cnn_bilstm_mltu is given preference. \n",
     "    \"\"\"\n",
-    "    #print(image.shape)\n",
+    "\n",
     "    htrnet_pred = htrnet.predict(image) \n",
     "    cnn_bilstm_mltu_pred = cnn_bilstm_mltu.predict(image)\n",
     "    trocr_pred = trocr.generate(\n",
     "        trocr_process(image, return_tensors=\"pt\").pixel_values\n",
     "    )\n",
+    "\n",
     "    trocr_pred = trocr_process.batch_decode(trocr_pred, skip_special_tokens=True)\n",
     "    trocr_pred = trocr_pred[0]\n",
-    "    #print(htrnet_pred, cnn_bilstm_mltu_pred, trocr_pred)\n",
+    "\n",
     "    freq_dict = {}\n",
     "    for pred in [htrnet_pred, cnn_bilstm_mltu_pred, trocr_pred]:\n",
     "        if pred in freq_dict:\n",
     "            freq_dict[pred] += 1\n",
     "        else:\n",
     "            freq_dict[pred] = 1\n",
+    "\n",
     "    max_freq = max(freq_dict.values())\n",
     "    max_freq_preds = [k for k, v in freq_dict.items() if v == max_freq]\n",
-    "    if len(max_freq_preds) == 1: # tie \n",
+    "\n",
+    "    if len(max_freq_preds) == 1:\n",
     "        return max_freq_preds[0]\n",
     "    else:\n",
+    "        # In case of a tie, return the cnn_bilstm_mltu prediction (given preference)\n",
     "        return cnn_bilstm_mltu_pred\n",
     "    \n",
+    "# Function to evaluate models using majority voting on a dataset\n",
     "def evaludate_with_majority_vote(datapath):\n",
     "    \n",
     "    htr_net = ImageToWordModel(\"results/htr_full_data/model.onnx\") \n",
     "    cnn_bilstm_mltu = ImageToWordModel(\"results/cnn_bilstm_mltu_all_data/model.onnx\") \n",
     "    processor = TrOCRProcessor.from_pretrained(\"microsoft/trocr-small-handwritten\", quiet=True)\n",
-    "    # device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
-    "    cer = [] \n",
-    "    wer = [] \n",
-    "        \n",
     "        \n",
     "    if \"csv\" in datapath:\n",
     "        df = pd.read_csv(datapath).values.tolist()\n",
@@ -422,6 +401,8 @@
     "    \n",
     "    cer = [] \n",
     "    wer = [] \n",
+    "\n",
+    "    # Iterate over each image-path and label pair in the dataset\n",
     "    for image_path, label in tqdm(df):\n",
     "        image = cv2.imread(image_path.replace(\"\\\\\", \"/\"))\n",
     "        \n",
@@ -436,7 +417,7 @@
     "        cer.append(get_cer(prediction_text, label))\n",
     "        wer.append(get_wer(prediction_text, label)) \n",
     "    \n",
-    "    return np.average(cer), np.average(wer) \n"
+    "    return np.average(cer), np.average(wer) "
    ]
   },
   {
@@ -491,26 +472,15 @@
    ],
    "source": [
     "test_cer_maj,test_wer_maj= evaludate_with_majority_vote(\"data/testset.npy\")\n",
+    "\n",
     "print(\"Test CER with majority vote: \", test_cer_maj)\n",
     "print(\"Test WER with majority vote: \", test_wer_maj)\n",
+    "\n",
     "val_cer_maj, val_wer_maj = evaludate_with_majority_vote(\"data/valset.npy\") \n",
+    "\n",
     "print(\"Val CER with majority vote: \", val_cer_maj)\n",
-    "print(\"Val WER with majority vote: \", val_wer_maj)\n"
+    "print(\"Val WER with majority vote: \", val_wer_maj)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
